Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbx-ui-svc
  namespace: testing
spec:
  type: ClusterIP
  selector:
    app: qbx-ui
  ports:
    - port: 8080
      targetPort: 8080
