Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbx-ui-ingress
spec:
  rules:
  - host: "jenkins.flexcub.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: qbx-ui-svc
            port:
              number: 8080
